# django-tenants-jwt-demo

./: .env.example  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: .gitmessage
backend/: .env.example
backend/api/: urls.py
backend/categories_shared/: admin.py  apps.py  models.py  views.py
backend/categories_shared/migrations/: 0001_initial.py
backend/clothes_tenant/: admin.py  apps.py  models.py  views.py
backend/clothes_tenant/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
backend/config/middlewares/: tenant_jwt_auth_middleware.py
backend/users/: admin.py  models.py  serializers.py  views.py
backend/users/migrations/: 0001_initial.py  0002_client_domain.py  0003_client_jwt_signing_key.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: LoginForm.tsx  ProtectedRoute.tsx  ShellBar.tsx
frontend/src/interfaces/: AppStore.tsx  AuthData.tsx  AuthTokenPayload.tsx  User.tsx
frontend/src/stores/: appStore.ts
frontend/src/utils/: api.ts  auth.ts  useApi.ts
frontend/src/views/: AppLayout.tsx  Home.tsx  Index.tsx  Login.tsx  PageNotFound.tsx
