[tool.poetry]
name = "django-tenants-jwt-demo"
version = "0.1.0"
description = ""
authors = ["Lajos Seyler"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.1"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
django-tenants = "^3.7.0"


[tool.poetry.group.dev.dependencies]
commitizen = "^3.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
